--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Upload Video</h1>
-<form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data" novalidate>
-    {{ form.csrf_token }}
-    <div>
-        <label for="video">Select Video</label>
-        <input type="file" name="video" id="video" accept="video/mp4,video/webm,video/ogg" required>
-        {% for error in form.video.errors %}
-        <p class="error">{{ error }}</p>
-        {% endfor %}
+    <div class="container">
+        <h2>Upload new video</h2>
+        <form method="POST" enctype="multipart/form-data" action="{{ url_for('upload') }}">
+            <div id="dropzone" class="dropzone">
+                <p>Drop files here or click to upload</p>
+                <input type="file" id="file-input" name="video" style="display: none;">
+                <span id="filename" style="display: none;"></span>
+                <progress id="progress-bar" value="0" max="100" style="display: none;"></progress>
+            </div>
+            <div class="action">
+                <button type="submit" class="action-button">Upload</button>
+            </div>
+        </form>
     </div>
-    <button type="submit">Upload</button>
-</form>
+    <script src="{{ url_for('static', filename='js/upload.js') }}"></script>
 {% endblock %}
