--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,21 +6,30 @@ ul {
 
 header {
     background-color: #ffffff;
-    padding: 1rem;
+    padding: 0.5rem;
+}
+
+nav {
+    overflow: hidden;
 }
 
 nav a {
     color: #000000;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    margin: 0.25rem;
 }
 
 nav a:hover {
     background-color: #cb2828;
 }
 
+nav a.left {
+    float: left;
+}
+
 nav a.right {
-    alignment: right;
+    float: right;
 }
 
 .flash-messages {
