--- a/static/css/library.css
+++ b/static/css/library.css
@@ -10,9 +10,6 @@
     height: auto !important;
 }
 
-.video-container video:hover {
-}
-
 .card {
     border: none;
     background-color: transparent;
@@ -65,6 +62,7 @@
     background-color: #000;
     padding-top: 56.25%; /* 16:9 aspect ratio */
     overflow: hidden;
+    transition: all 0.1s ease-in-out;
 }
 
 .video-grid-item video {
@@ -75,6 +73,15 @@
     height: 100%;
     object-fit: cover;
     cursor: pointer;
+}
+
+.video-grid-item:hover {
+    outline: 2px solid #cb2828;
+    outline-offset: 2px;
+    width: 104%;
+    height: 104%;
+    top: -2%;
+    left: -2%;
 }
 
 .video-grid-item .title {
