--- a/static/css/player.css
+++ b/static/css/player.css
@@ -24,7 +24,7 @@
     appearance: none;
     width: 100%;
     height: 5px;
-    background: white;
+    background: linear-gradient(to right, #cb2828 50%, white 50%, white 50%, #cb2828 50%);
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
@@ -38,8 +38,8 @@
     appearance: none;
     width: 25px;
     height: 25px;
-    background: linear-gradient(90deg, red 50%, white 50%, white 52%, red 52%); /* Add thin white line */
-    background-size: 200% 100%; /* Adjust background size to make line visible */
+    background: linear-gradient(to right, #cb2828 50%, white 50%, white 50%, #cb2828 50%);
+    border: 1px solid red;
     cursor: pointer;
     border-radius: 50%;
 }
@@ -47,8 +47,8 @@
 .slider::-moz-range-thumb {
     width: 25px;
     height: 25px;
-    background: linear-gradient(90deg, red 50%, white 50%, white 52%, red 52%); /* Add thin white line */
-    background-size: 200% 100%; /* Adjust background size to make line visible */
+    background: linear-gradient(to right, #cb2828 50%, white 50%, white 50%, #cb2828 50%);
+    border: 1px solid red;
     cursor: pointer;
     border-radius: 50%;
 }
@@ -63,4 +63,10 @@
     font-size: 1rem;
     color: white;
     margin-bottom: 5px;
+}
+
+.small {
+    width: 25%;
+    display: block;
+    margin: auto;
 }
