--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
 <body>
 <header>
     <nav>
-        <a href="{{ url_for('base') }}">Home</a>
+        <a class="left" href="{{ url_for('base') }}">Home</a>
         {% if current_user.is_authenticated %}
-            <a href="{{ url_for('library') }}">My Videos</a>
-            <a href="{{ url_for('upload') }}">Upload</a>
+            <a class="left" href="{{ url_for('library') }}">My Videos</a>
+            <a class="left" href="{{ url_for('upload') }}">Upload</a>
             <a class="right" href="{{ url_for('logout') }}">Logout</a>
         {% else %}
             <a class="right" href="{{ url_for('register') }}">Register</a>
