--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,7 @@ ul {
 header {
     background-color: #ffffff;
     padding: 0.5rem;
+    width: 100%;
 }
 
 nav {
@@ -103,7 +104,8 @@ h1 {
 }
 
 div.title {
-    width: 60rem;
+    width: 80%;
+    max-width: 60rem;
     color: white;
     position: absolute;
     left: 50%;
