--- a/templates/player.html
+++ b/templates/player.html
@@ -24,7 +24,7 @@
                     <input class="slider" type="range" id="saturation" name="saturation" min="0" max="200" value="100">
                 </div>
                 <div class="slider-container">
-                    <label class="slider-label" for="hue-rotate">Hue-rotate:</label>
+                    <label class="slider-label" for="hue-rotate">HUE:</label>
                     <input class="slider" type="range" id="hue-rotate" name="hue-rotate" min="0" max="360" value="0">
                 </div>
             </div>
