--- a/static/css/library.css
+++ b/static/css/library.css
@@ -1,49 +1,49 @@
 .video-container {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
     height: 0;
+    padding-bottom: 56.25%; /* 16:9 */
+    position: relative;
 }
 
 .video-container video {
     /* override other styles to make responsive */
-    width: 100% !important;
-    height: auto !important;
+    width: 100%;
+    height: fit-content;
 }
 
 .card {
-    border: none;
     background-color: transparent;
+    border: none;
 }
 
 .card-body {
-    padding: 0.5rem 0;
+    align-items: center;
+    background-color: #f8f9fa;
+    border-top: 1px solid #dee2e6;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background-color: #f8f9fa;
-    border-top: 1px solid #dee2e6;
+    padding: 0.5rem 0;
 }
 
 .card-title {
-    margin-bottom: 0.5rem;
     font-size: 1rem;
     font-weight: 600;
+    margin-bottom: 0.5rem;
 }
 
 .card-text {
-    margin-bottom: 0.5rem;
-    font-size: 0.875rem;
     color: #6c757d;
+    font-size: 0.875rem;
+    margin-bottom: 0.5rem;
 }
 
 .card-footer {
-    padding: 0.5rem 0;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
     background-color: #f8f9fa;
     border-top: 1px solid #dee2e6;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 0;
 }
 
 .card-footer a {
@@ -52,48 +52,48 @@
 
 .video-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding: 1rem;
 }
 
 .video-grid-item {
-    position: relative;
     background-color: #000;
-    padding-top: 56.25%; /* 16:9 aspect ratio */
     overflow: hidden;
+    padding-top: 56.25%; /* 16:9 aspect ratio */
+    position: relative;
     transition: all 0.1s ease-in-out;
 }
 
 .video-grid-item video {
+    cursor: pointer;
+    height: 100%;
+    left: 0;
+    object-fit: cover;
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    cursor: pointer;
 }
 
 .video-grid-item:hover {
+    height: 104%;
+    left: -2%;
     outline: 2px solid #cb2828;
     outline-offset: 2px;
-    width: 104%;
-    height: 104%;
     top: -2%;
-    left: -2%;
+    width: 104%;
 }
 
-.video-grid-item .title {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 0.5em;
+.video-grid-item .video-title {
     background-color: rgba(0, 0, 0, 0.7);
+    bottom: 0;
     color: #fff;
     font-size: 0.9rem;
+    left: 0;
     overflow: hidden;
+    padding: 0.5em;
+    position: absolute;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: 100%;
 }
