--- a/static/css/player.css
+++ b/static/css/player.css
@@ -2,55 +2,54 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 50%;
     margin: 0 auto;
 }
 
 /* Slider container */
 .slider-container {
-    flex: 0 0 calc(50% - 10px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: black;
-    padding: 10px;
+    display: flex;
+    flex: 0 0 calc(50% - 10px);
+    flex-direction: column;
+    justify-content: center;
     margin: 5px;
+    padding: 10px;
 }
 
 /* Slider */
 .slider {
     -webkit-appearance: none;
     appearance: none;
-    width: 100%;
-    height: 5px;
     background: linear-gradient(to right, #cb2828 50%, white 50%, white 50%, #cb2828 50%);
-    outline: none;
+    height: 5px;
+    margin-bottom: 10px;
     opacity: 0.7;
+    outline: none;
     -webkit-transition: .2s;
     transition: opacity .2s;
-    margin-bottom: 10px;
+    width: 100%;
 }
 
 /* Slider thumb */
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 25px;
-    height: 25px;
     background: linear-gradient(to right, #cb2828 50%, white 50%, white 50%, #cb2828 50%);
     border: 1px solid red;
-    cursor: pointer;
     border-radius: 50%;
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
 }
 
 .slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
     background: linear-gradient(to right, #cb2828 50%, white 50%, white 50%, #cb2828 50%);
     border: 1px solid red;
-    cursor: pointer;
     border-radius: 50%;
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
 }
 
 /* Hover effect */
@@ -60,13 +59,143 @@
 
 /* Labels */
 .slider-label {
-    font-size: 1rem;
     color: white;
+    font-size: 1rem;
     margin-bottom: 5px;
 }
 
 .small {
-    width: 25%;
     display: block;
     margin: auto;
+    width: min-content;
+}
+
+.video-name {
+    min-width: 50%;
+    text-decoration: underline;
+}
+
+.modal {
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+    height: 100%;
+    left: 0;
+    overflow: auto;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    border: 1px solid #888;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 15% auto;
+    padding: 20px;
+}
+
+/* Media query for screens less than 600px wide */
+@media screen and (max-width: 600px) {
+    .modal-content {
+        width: 90%;
+    }
+    .slider-grid {
+        width: 90%;
+    }
+}
+
+/* Media query for screens between 600px and 900px wide */
+@media screen and (min-width: 600px) and (max-width: 900px) {
+    .modal-content {
+        width: 75%;
+    }
+
+    .slider-grid {
+        width: 75%;
+    }
+}
+
+/* Media query for screens wider than 900px */
+@media screen and (min-width: 900px) {
+    .modal-content {
+        width: 50%;
+    }
+
+    .slider-grid {
+        width: 50%;
+    }
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+/* Add this to your existing CSS */
+.form-container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.video-card {
+    width: 100%;
+}
+
+.video-card video {
+    width: 100%;
+}
+
+.input-dialogue {
+    background-color: transparent;
+    border: 0;
+    border-bottom: 2px solid #eee;
+    border-bottom-color: #cb2828;
+    color: black;
+    font: inherit;
+    font-size: 1.125rem;
+    outline: 0;
+    padding: 0.25rem 0;
+    z-index: 1;
+}
+
+/* Add these styles to your existing CSS */
+.modal-header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.close-button {
+    background: none;
+    border: none;
+    color: #aaa;
+    cursor: pointer;
+    font-size: 28px;
+    font-weight: bold;
+    margin-left: auto;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    outline: none;
+    text-decoration: none;
+}
+
+.input-container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
 }
