--- a/templates/player.html
+++ b/templates/player.html
@@ -2,10 +2,31 @@
 
 {% block content %}
     <div class="container mt-4">
-        <h1 class="mb-4">{{ video.name }}</h1>
-        <div class="video-container">
-            <video id="videoPlayer" width="50%" controls>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1 class="video-name">{{ video.name }}</h1>
+            <button id="editButton" class="action-button small">Edit</button>
+        </div>
+
+        <!-- Modal -->
+        <div id="editModal" class="modal">
+            <div class="modal-content">
+                <button class="close-button">&times;</button>
+                <form action="{{ url_for('edit_video_name', video_id=video.id) }}" method="POST" class="mb-4 form-container">
+                    <label for="new_video_name">Edit Video Name:</label>
+                    <input class="input-dialogue" type="text" id="new_video_name" name="new_video_name" value="{{ video.name }}" maxlength="18"
+                           required><br>
+                    <button type="submit" class="action-button small">Save</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="video-card">
+            <video id="videoPlayer" width="50%" controls preload="none">
                 <source src="{{ url_for('static', filename='uploads/' + video.filename) }}" type="video/mp4">
+                <source src="{{ url_for('static', filename='uploads/' + video.filename) }}" type="video/x-msvideo">
+                <source src="{{ url_for('static', filename='uploads/' + video.filename) }}" type="video/x-ms-wmv">
+                <source src="{{ url_for('static', filename='uploads/' + video.filename) }}" type="video/quicktime">
+                <source src="{{ url_for('static', filename='uploads/' + video.filename) }}" type="video/x-matroska">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -33,5 +54,6 @@
             </form>
         </div>
     </div>
+    <script src="{{ url_for('static', filename='js/edit-video-name.js') }}"></script>
     <script src="{{ url_for('static', filename='js/video-player.js') }}"></script>
 {% endblock %}
