--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %}
+{% extends "header.html" %}
+
+{% block style %}
+    <link rel="stylesheet" href="/static/css/card.css">
+{% endblock %}
 
 {% block content %}
     <div class="card">
