--- a/static/css/library.css
+++ b/static/css/library.css
@@ -6,8 +6,8 @@
 
 .video-container video {
     /* override other styles to make responsive */
-    width: 100%;
     height: fit-content;
+    width: 100%;
 }
 
 .card {
@@ -65,7 +65,7 @@
     transition: all 0.1s ease-in-out;
 }
 
-.video-grid-item video {
+.video-grid-item img {
     cursor: pointer;
     height: 100%;
     left: 0;
