--- a/templates/header.html
+++ b/templates/header.html
@@ -7,14 +7,11 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.min.css"
-          integrity="sha384-KtuplUXgNMAf2GoyNzMW3kbEaMVG6f5tA2z8YL+zlU5g5U6a5K6xm5H6v5zX9KZg" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/library.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/upload.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/player.css') }}">
-    <link rel="shortcut icon" href="../static/images/logotype_mini.png">
+    <link rel="stylesheet" href="/static/css/base.css">
+    <link rel="stylesheet" href="/static/css/header.css">
+    {% block style %}
+    {% endblock %}
+    <link rel="shortcut icon" href="../static/logo/logo_mini.png">
     <title>Video App</title>
 </head>
 <body>
@@ -37,12 +34,17 @@
         {% if messages %}
             <ul class="flash-messages">
                 {% for category, message in messages %}
-                    <li class="{{ category }}">{{ message }}</li>
+                    <li class="{{ category }}">
+                        {{ message }}
+                        <div class="progress-bar"></div>
+                    </li>
                 {% endfor %}
             </ul>
         {% endif %}
     {% endwith %}
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
+    <script src="/static/js/flash-messages.js"></script>
 </main>
 </body>
 </html>
