--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "header.html" %}
 
 {% block content %}
     <h1>Introducing the KION Player Plus: A World of Accessible Entertainment for Everyone!</h1>
