--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
                 <label for="password" class="input-label">Password</label>
             </div>
             <div class="action">
-                <button type="submit" class="action-button">Войти</button>
+                <button type="submit" class="action-button">Login</button>
             </div>
         </form>
     </div>
