--- a/templates/register.html
+++ b/templates/register.html
@@ -39,7 +39,7 @@
                 <label for="password_confirm" class="input-label">Confirm Password</label>
             </div>
             <div class="action">
-                <button type="submit" class="action-button">Регистрация</button>
+                <button type="submit" class="action-button">Register</button>
             </div>
         </form>
     </div>
