--- a/templates/player.html
+++ b/templates/player.html
@@ -59,10 +59,14 @@
             <!-- Buttons -->
             <div class="buttons-grid">
                 <form action="{{ url_for('delete_video', video_id=video.id) }}" method="POST">
-                    <button type="submit" class="action-button small">Delete</button>
+                    <button type="submit" class="action-button small">
+                        <span class="material-symbols-outlined">delete</span>
+                    </button>
                 </form>
                 <div>
-                    <button id="editButton" class="action-button small">Edit</button>
+                    <button id="editButton" class="action-button small">
+                        <span class="material-symbols-outlined">edit</span>
+                    </button>
                 </div>
             </div>
         </div>
