--- a/static/css/player.css
+++ b/static/css/player.css
@@ -7,7 +7,11 @@
 
 .buttons-grid {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+.buttons-grid .button-handler {
+    flex: 1;
 }
 
 /* Slider container */
