--- a/templates/player.html
+++ b/templates/player.html
@@ -58,12 +58,12 @@
             </div>
             <!-- Buttons -->
             <div class="buttons-grid">
-                <form action="{{ url_for('delete_video', video_id=video.id) }}" method="POST">
+                <form class="button-handler" action="{{ url_for('delete_video', video_id=video.id) }}" method="POST">
                     <button type="submit" class="action-button small">
                         <span class="material-symbols-outlined">delete</span>
                     </button>
                 </form>
-                <div>
+                <div class="button-handler">
                     <button id="editButton" class="action-button small">
                         <span class="material-symbols-outlined">edit</span>
                     </button>
