preparing for video processing

--- a/templates/player.html
+++ b/templates/player.html
@@ -26,6 +26,7 @@
 
         <!-- Video -->
         <div class="video-card">
+            <canvas id="canvas"></canvas>
             <video id="videoPlayer" data-video-id="{{ video.id }}"
                    style="filter: brightness({{ video.video_settings.brightness }}) contrast({{ video.video_settings.contrast }});"
                    width="50%" controls playsinline preload="metadata">
