--- a/static/css/player.css
+++ b/static/css/player.css
@@ -14,6 +14,15 @@
     flex: 1;
 }
 
+#canvas {
+    z-index: 1;
+}
+
+#videoPlayer {
+    z-index: 0;
+}
+
+
 /* Slider container */
 .slider-container {
     align-items: center;
