--- a/static/css/spinner.css
+++ b/static/css/spinner.css
@@ -8,16 +8,17 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 999;
 }
 
 .spinner {
-    animation: spin 2s linear infinite;
-    border: 6px solid #f3f3f3;
+    animation: spin 1s linear infinite;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #3f51b5;
     border-radius: 50%;
-    border-top: 6px solid #cb2828;
-    height: 60px;
-    width: 60px;
+    border-top-color: #3f51b5;
+    height: 40px;
+    width: 40px;
 }
 
 @keyframes spin {
