--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,6 +5,7 @@
           integrity="sha384-KtuplUXgNMAf2GoyNzMW3kbEaMVG6f5tA2z8YL+zlU5g5U6a5K6xm5H6v5zX9KZg" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/static/css/upload.css">
     <link rel="stylesheet" href="/static/css/card.css">
+    <link rel="stylesheet" href="/static/css/spinner.css"> <!-- Add spinner css -->
 {% endblock %}
 
 {% block content %}
@@ -26,5 +27,5 @@
         </form>
     </div>
     <script src="/static/js/upload.js"></script>
-    <script src="/static/js/spinner.js"></script>
+    {#    <script src="/static/js/spinner.js"></script>#}
 {% endblock %}
