--- a/templates/player.html
+++ b/templates/player.html
@@ -30,8 +30,9 @@
                    style="filter:
                            brightness({{ video.video_settings.brightness }})
                            contrast({{ video.video_settings.contrast }})
-                           saturate({{ video.video_setting.saturate }})
-                           hue-rotate({{  video.video_setting.hueRotate }});
+                           saturate({{ video.video_settings.saturate }})
+                           hue-rotate({{ video.video_settings.hueRotate }})
+                           blur(0px)
                            "
                    width="50%" controls playsinline preload="metadata">
                 <source src="{{ url_for('static', filename='user_data/video/' + video.video_filename ) }}" type="video/mp4">
@@ -58,11 +59,13 @@
                 </div>
                 <div class="slider-container">
                     <label class="slider-label" for="saturation">Saturation:</label>
-                    <input class="slider" type="range" id="saturation" name="saturation" min="0" max="200" value="100">
+                    <input class="slider" type="range" id="saturation" name="saturation" min="0" max="200"
+                           value="{{ video_settings.saturate * 100 }}">
                 </div>
                 <div class="slider-container">
                     <label class="slider-label" for="hue-rotate">HUE:</label>
-                    <input class="slider" type="range" id="hue-rotate" name="hue-rotate" min="0" max="360" value="0">
+                    <input class="slider" type="range" id="hue-rotate" name="hue-rotate" min="0" max="360"
+                           value="{{ video_settings.hueRotate }}">
                 </div>
             </div>
             <!-- Buttons -->
@@ -77,6 +80,8 @@
                         <span class="material-symbols-outlined">edit</span>
                     </button>
                 </div>
+                <input type="checkbox" id="blur-toggle" name="blur-toggle">
+                <label for="blur-toggle">Toggle Blur</label>
             </div>
         </div>
     </div>
