--- a/templates/player.html
+++ b/templates/player.html
@@ -75,12 +75,21 @@
                     </button>
                 </form>
                 <div class="button-handler">
+                    <button id="checkbox-epilepsy" class="action-button small">
+                        <span class="material-symbols-outlined">bolt</span>
+                    </button>
+                </div>
+                <div class="button-handler">
+                    <button id="checkbox-clip" class="action-button small">
+                        <span class="material-symbols-outlined">settings_accessibility</span>
+                    </button>
+                </div>
+                <div class="button-handler">
                     <button id="editButton" class="action-button small">
                         <span class="material-symbols-outlined">edit</span>
                     </button>
                 </div>
-                <input type="checkbox" id="blur-toggle" name="blur-toggle">
-                <label for="blur-toggle">Toggle Blur</label>
+
             </div>
         </div>
     </div>
