--- a/templates/header.html
+++ b/templates/header.html
@@ -21,10 +21,12 @@
         {% if current_user.is_authenticated %}
             <a class="left" href="{{ url_for('library') }}">My Videos</a>
             <a class="left" href="{{ url_for('upload') }}">Upload</a>
-            <a href="{{ url_for('logout') }}">
-                <span class="material-symbols-outlined right">logout</span>
+{#            <a href="{{ url_for('profile') }}">#}
+{#                <span class="material-symbols-outlined right">person</span>#}
+{#            </a>#}
+            <a href="{{ url_for('profile') }}">
+                <span class="material-symbols-outlined right">person</span>
             </a>
-            {#            <span class="material-symbols-outlined right">settings</span>#}
         {% else %}
             <a class="left" href="{{ url_for('home') }}">About us</a>
             <a href="{{ url_for('login') }}">
