--- a/templates/library.html
+++ b/templates/library.html
@@ -3,11 +3,16 @@
 {% block style %}
     <link rel="stylesheet" href="https://unpkg.com/plyr@3/dist/plyr.css">
     <link rel="stylesheet" href="/static/css/library.css">
+    <link rel="stylesheet" href="/static/css/card.css">
 {% endblock %}
 
 {% block content %}
     <div class="container">
         <h2>Video Library</h2>
+        <div class="input">
+            <input type="text" class="input-field" name="link" id="link">
+            <label for="link" class="input-label">Type link to YouTube video/stream</label>
+        </div>
         <div class="video-grid">
             {% for video in videos %}
                 <div class="video-grid-item">
@@ -19,5 +24,6 @@
             {% endfor %}
         </div>
     </div>
+    <script src="/static/js/card.js"></script>
     <script src="/static/js/library.js"></script>
 {% endblock %}
